1. Collection API Улучшения[70623#252141]