@@ -3,6 +3,7 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.core.Is.is;
 
@@ -13,7 +14,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -28,7 +29,7 @@ public class ConvertList2ArrayTest {
     public void when11ElementsThen12() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31),
+                List.of(21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31),
                 3
         );
         int[][] expect = {
